# mono

./: .commitgpt-template  .commitgpt.json  .dockerignore  .env.example  .gitignore  .npmrc  .prettierrc  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENTION.md  DEV-SETUP-MACOS.md  Dockerfile  NOTIFICATOR2_SUMMARY.md  README.md  SUMMARY.md  TASKS.md  TEST_PLAN.md  changelog_prompt.txt  debug-meet.js  docker-compose.testnet.yml  docker-compose.yaml  index.html  init-cooperative1.json  init-voskhod.json  issues.txt  lerna.json  monocoop.code-workspace  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  update-submodules.sh
components/contracts/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  build-all.sh  build.sh  build_contracts_cdt.sh  package.json  pnpm-lock.yaml  watch-docs.sh
components/contracts/.cursor/rules/: always.mdc  doc-actions.mdc  doc-consts.mdc  doc-groups.mdc  doc-process.mdc  doc-tables.mdc
components/contracts/.qoder/rules/: always.md  doc-actions.md  doc-consts.md  doc-groups.md  doc-icons.md  doc-make-effects.md  doc-notation.md  doc-process.md  main.md
components/contracts/cpp/: CHANGELOG.md  mainpage.dox  package.json
components/contracts/cpp/apps/: CMakeLists.txt  README.md  apps.cpp  apps.hpp
components/contracts/cpp/apps/src/: cleanup.cpp  delclient.cpp  expsub.cpp  extendsub.cpp  reactivate.cpp  regclient.cpp  regcoop.cpp  regpackage.cpp  regsub.cpp  setattempt.cpp  setcoop.cpp  setglobals.cpp  setpricing.cpp  setrelease.cpp  transferpkg.cpp  withdraw.cpp
components/contracts/cpp/branch/: CMakeLists.txt  README.md  branch.cpp  branch.hpp
components/contracts/cpp/branch/src/: addtrusted.cpp  createbranch.cpp  deletebranch.cpp  deltrusted.cpp  editbranch.cpp
components/contracts/cpp/capital/: CMakeLists.txt  COORDINATOR_EXAMPLE.md  COORDINATOR_EXAMPLE_ENHANCED.md  COORDINATOR_LOGIC.md  GAMIFICATION.md  VODYANOV_CHANGES.md  capital.cpp  capital.hpp  p.cap.debt.standard.yaml  p.cap.import.standard.yaml  p.cap.invest.standard.yaml  p.cap.prop.standard.yaml  p.cap.rid.standard.yaml
components/contracts/cpp/capital/doc/: capital-overview.dox  crps-algorithm.dox  debt-management-process.dox  membership-distribution-process.dox  processes-index.dox  project-execution-process.dox  project-lifecycle-process.dox  withdrawal-process.dox
components/contracts/cpp/capital/docs/: INVESTMENT_ACCOUNTING_FIX.md  capital-overview.dox  crps-algorithm.dox  document-traces.dox  effects-traces.dox  entries-traces.dox  meta-projects.dox
components/contracts/cpp/capital/domain/: index.hpp
components/contracts/cpp/capital/include/: appendix.hpp  tables.hpp
components/contracts/cpp/capital/src/: refresh.cpp  withdraw.cpp
components/contracts/cpp/contributor/: CMakeLists.txt  README.md  contributor.cpp  contributor.hpp
components/contracts/cpp/draft/: CMakeLists.txt  draft.cpp  draft.hpp
components/contracts/cpp/draft/src/: createdraft.cpp  createtrans.cpp  deldraft.cpp  deltrans.cpp  editdraft.cpp  edittrans.cpp  upversion.cpp
components/contracts/cpp/expense/: CMakeLists.txt  expense.cpp  expense.hpp
components/contracts/cpp/fund/: CMakeLists.txt  fund.cpp  fund.hpp
components/contracts/cpp/fund/src/: accumfee.cpp  addaccum.cpp  addcirculate.cpp  addexpense.cpp  addinitial.cpp  authorize.cpp  init.cpp  (+9 more)
components/contracts/cpp/gateway/: CMakeLists.txt  gateway.cpp  gateway.hpp
components/contracts/cpp/ledger/: CMakeLists.txt  ledger.cpp  ledger.hpp
components/contracts/cpp/ledger2/: CMakeLists.txt  ledger2.cpp  ledger2.hpp  p.adj.fix.standard.yaml
components/contracts/cpp/lib/: MASTER_APPROVALS_IMPLEMENTATION.md  accounts.hpp  admins.hpp  agreements.hpp  balances.hpp  branch.hpp  changes.hpp  common.hpp  consts.hpp  coops.hpp  counts.hpp  debts.hpp  drafts.hpp  funds.hpp  index.hpp  programs.hpp  registry.hpp  shared_actions.hpp  shared_approver.hpp  shared_branch.hpp  shared_debts.hpp  shared_document.hpp  shared_fund.hpp  shared_gateway.hpp  shared_ledger.hpp  shared_loan.hpp  shared_marketplace.hpp  shared_names.hpp  shared_registrator.hpp  shared_soviet.hpp  shared_wallet.hpp  utils.hpp
components/contracts/cpp/loan/: CMakeLists.txt  loan.cpp  loan.hpp
components/contracts/cpp/marketplace/: CMakeLists.txt  README.md  marketplace.cpp  marketplace.hpp  p.mkt.reqst.standard.yaml
components/contracts/cpp/meet/: CMakeLists.txt  meet.cpp  meet.hold.standard.yaml  meet.hpp
components/contracts/cpp/registrator/: CMakeLists.txt  p.reg.accept.standard.yaml  p.reg.refund.standard.yaml  reg.adduser.standard.yaml  reg.coop.standard.yaml  reg.recovery.standard.yaml  reg.regist.standard.yaml  registrator.cpp  registrator.hpp
components/contracts/cpp/soviet/: CMakeLists.txt  p.sov.axncnv.standard.yaml  sov.authpkg.standard.yaml  sov.decision.standard.yaml  sov.selectbranch.standard.yaml  soviet.abi  soviet.cpp  soviet.hpp  soviet.wasm
components/contracts/cpp/system/: CMakeLists.txt  LICENSE  README.md  docs.json
components/contracts/cpp/test/: CMakeLists.txt  test.cpp  test.hpp
components/contracts/cpp/tests/: CMakeLists.txt  contracts.hpp.in  coopenomics_tester.hpp  eosio.powerup_tests.cpp  eosio.system_blockinfo_tests.cpp  eosio.system_tester.hpp  eosio.system_tests.cpp  fund.tests.cpp  test_symbol.hpp
components/contracts/cpp/wallet/: CMakeLists.txt  p.wal.depo.standard.yaml  p.wal.wthdrw.standard.yaml  wall.deposit.standard.yaml  wallet.cpp  wallet.hpp
components/contracts/docker/: Dockerfile  README.md  entrypoint.sh
components/contracts/docs/: DoxygenLayout.xml
components/contracts/docs/css/: doxygen-awesome-darkmode-toggle.js
components/contracts/standards-site/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
components/contracts/standards-site/src/: App.vue  main.ts  router.ts  style.css
components/contracts/types/: types-generator.sh  types-generator2.sh
components/contracts/types/abi_json/: branch.json  capital.json  draft.json  fund.json  gateway.json  loan.json  marketplace.json  meet.json  registrator.json  soviet.json  wallet.json
(+13749 files in other folders)
